cabal-version:      3.0
name:               mtl-ng
version:            1.0.0
synopsis:           MTL + transformers, but better than both.
description:        Someday something will go here.
homepage:           https://github.com/kozross/mtl-ng
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/mtl-ng/issues
copyright:          (C) Koz Ross 2022
category:           MTL
tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.3
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules:
    MTL.Ask
    MTL.Local
    MTL.Reader
    MTL.State
    MTL.Trans

  build-depends:
    , base           >=4.14  && <4.18
    , comonad        ^>=5.0.0
    , contravariant  ^>=1.5.0
    , semigroupoids  ^>=5.3.0

  hs-source-dirs:  src
